# SpeedometerNode

./: .gitignore  CMakeLists.txt  README.md  Speedometer.nfc  speedometer.ncf
SpeedometerNode.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
nbproject/: configurations.xml  project.xml
src/: main.c
